--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fitkit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yadrychnikovNicolay.github.io/fitkit",
+  "homepage": "http://str.quest",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -40,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.3.0"
   }
 }
