--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fitkit",
-  "version": "0.1.2",
+  "version": "0.1.4-alex",
   "private": true,
   "homepage": "http://str.quest",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.487.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^7.2.0",
